# qcom-usb-userspace-drivers

./: .gitignore  CONTRIBUTING.md  README.md
.github/: SECURITY.md  dependabots.yml
src/linux/: QcDevDriver.sh  README.md  ReleaseNotes.txt  pack_deb.sh
src/linux/installer/: VERSION  build_deb.sh
src/usb/linux/: QcDevDriver.sh  README.md  qcom_drivers.sh  qcom_userspace.sh
src/usb/windows/: buildQikInstaller.bat  buildScript.pl  install.bat  qcadb.cat  qcadb.inf  qcfilter.inf  qcmdmlib.inf  qcserlib.inf  qcwwanlib.cat  qcwwanlib.inf  qdblib.cat  qdblib.inf
src/usb/windows/filter/i386/: qcusbfilter.sys
src/windows/: README.md  build.bat  qcadb.inf  qcfilter.cat  qcfilter.inf  qcmdmlib.cat  qcmdmlib.inf  qcserlib.cat  qcserlib.inf  qcwwanlib.inf  qdblib.inf  sign.bat  uninstall.bat
src/windows/filter/amd64/: qcusbfilter.sys
src/windows/filter/arm/: qcusbfilter.sys
src/windows/filter/arm64/: qcusbfilter.sys
src/windows/installer/: CMakeLists.txt  install.c  package.bat  package.py  version.h
